# rice

./: Cargo.toml  README.md
.agents/skills/rice-markers/: SKILL.md
src/: lib.rs  main.rs
