[package]
name = "rice"
version = "0.1.0"
edition = "2024"
description = "Splice dependency or AI agent files to easily install components"
license = "MPL-2.0"
repository = "https://github.com/portal-co/rice.git"

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }

[features]
cli=["dep:clap"]

[[bin]]
name = "rice"
path = "src/main.rs"
# Enable the 'cli' feature specifically for this binary target
required-features = ["cli"]