[package]
name = "rice"
version = "0.1.0"
edition = "2024"
description = "Splice dependency or AI agent files to easily install components"
license = "MPL-2.0"
repository = "https://github.com/portal-co/rice.git"

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
zip = { version = "2", optional = true }

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-io-adapters = { version = "0.7.0", optional = true }

[features]
default = ["std"]
std = ["embedded-io/std", "embedded-io-async/std", "dep:embedded-io-adapters", "embedded-io-adapters/std"]
cli = ["dep:clap", "std"]
zip = ["dep:zip", "std"]

[[bin]]
name = "rice"
path = "src/main.rs"
# Enable the 'cli' feature specifically for this binary target
required-features = ["cli"]
